// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichText /> should render editable value if present 1`] = `
<View>
  <Text
    onLongPress={null}
    onPress={null}
  >
    <Text
      style={
        Array [
          null,
          Object {},
        ]
      }
    >
      this value should be rendered ©
    </Text>
  </Text>
</View>
`;

exports[`<RichText /> should render nothing with missing editable and value 1`] = `null`;

exports[`<RichText /> should render nothing with missing field 1`] = `null`;

exports[`<RichText /> should render other attributes with other props provided 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontSize": 22,
        },
        null,
      ]
    }
  >
    value with 
  </Text>
  <Text
    onLongPress={null}
    onPress={null}
    style={
      Object {
        "fontSize": 16,
        "marginBottom": 10,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 22,
          },
          Object {
            "fontSize": 16,
            "marginBottom": 10,
          },
        ]
      }
    >
      markup
    </Text>
  </Text>
</View>
`;

exports[`<RichText /> should render value if editable is undefined 1`] = `
<View>
  <Text
    style={
      Array [
        null,
        null,
      ]
    }
  >
    this value should be rendered
  </Text>
</View>
`;
